--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
+    "target": "ES2022",
     "module": "commonjs",
-    "target": "es6",
+    "rootDir": "src",
     "outDir": "dist",
-    "rootDir": ".",
-    "sourceMap": true,
-    "strict": false,
-    "esModuleInterop": true
+    "strict": true,
+    "esModuleInterop": true,
+    "types": ["node"]
   }
 }
